# ex4

./: CMakeLists.txt  Exception.h  Exceptions.h  Mtmchkin.cpp  Mtmchkin.h  main.cpp  test.cpp  utilities.cpp  utilities.h
Cards/: Barfight.cpp  Barfight.h  BattleCard.cpp  BattleCard.h  Card.cpp  Card.h  Dragon.cpp  Dragon.h  EnemyCard.cpp  EnemyCard.h  Gremlin.cpp  Gremlin.h  Gremllin.cpp  Mana.cpp  Mana.h  Merchant.cpp  Merchant.h  Treasure.cpp  Treasure.h  Well.cpp  Well.h  Witch.cpp  Witch.h
Players/: Healer.cpp  Healer.h  Ninja.cpp  Ninja.h  Player.cpp  Player.h  Warrior.cpp  Warrior.h
inputs/: empty.txt
tests/: allTen_test_expected.txt
